# BorderProfiler

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
include/ImageBorders/: ImageBorders.hh
lib/: ImageBorders.cc
src/: ApplySobelFilter.cc  main.cc
